<resources>
    <string name="app_name">UbiBike</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">UbiBike</string>
    <string name="title_activity_messenger">Messenger</string>
    <string name="title_activity_points">Points Menu</string>
    <string name="title_activity_user">User Menu</string>
    <string name="title_activity_book">Booking</string>
    <string name="title_activity_recent">Past Trajectories</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_wifi_points">Wifi Points</string>

    <string name="messenger_label">Messenger</string>
    <string name="points_label">Points Menu</string>
    <string name="user_label">User Menu</string>
    <string name="booking_label">Booking Menu</string>
    <string name="points_now_label">Wifi Points</string>

    <string name="register_tag">Register</string>

    <string name="user_tag">Username: </string>
    <string name="pass_tag">Password: </string>
    <string name="pass_retype_tag">Retype Password: </string>

    <string name="points_tag">Points: </string>
    <string name="send_tag">Send</string>
    <string name="collect_tag">Collect Points</string>

    <string name="show_user_tag">Show information</string>
    <string name="send_traj_tag">Send trajectory</string>
    <string name="recent_tag">Recent trajectories</string>
    <string name="past_tag">Past trajectories</string>

    <string name="list_tag">List stations</string>
    <string name="book_tag">Book Bike</string>
    <string name="pick_tag">Bike pick up</string>
    <string name="drop_tag">Bike drop off</string>

    <string name="search_tag">Update</string>
    <string name="turn_wifi_tag">Turn Wifi</string>


    <string name="title_activity_trajectory_map">Map</string>
    <string name="title_activity_stations_map">Map</string>

    <string name="UserInfoUserName">UserName:</string>
    <string name="UserInfoUserPoints">Points:</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">25dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="msg_port">10001</string>
    <string name="points_port">10001</string>

</resources>
