<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pt.ulisboa.tecnico.cmov.ubibike.UserActivity"
    tools:showIn="@layout/activity_user"
    android:background="@drawable/back2" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_tag"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/extractUsername"
        android:ems="10"
        android:textSize="20sp"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="25dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_user_tag"
        android:id="@+id/buttonShowInfo"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_below="@+id/extractUsername"
        android:layout_centerHorizontal="true" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_traj_tag"
        android:id="@+id/button3"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_below="@+id/buttonShowInfo"
        android:layout_centerHorizontal="true" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_tag"
        android:id="@+id/button4"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/past_tag"
        android:id="@+id/button5"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" >
    </Button>

</RelativeLayout>
