<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pt.ulisboa.tecnico.cmov.ubibike.BookActivity"
    tools:showIn="@layout/activity_book"
    android:background="@drawable/back2" >

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_tag"
        android:id="@+id/button1"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_tag"
        android:id="@+id/button2"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_tag"
        android:id="@+id/button3"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/drop_tag"
        android:id="@+id/button4"
        android:background="@drawable/btn_black"
        style="@style/ButtonText"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" >
    </Button>

</RelativeLayout>
