<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pt.ulisboa.tecnico.cmov.ubibike.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_tag"
        android:textStyle="bold"
        android:id="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:textSize="25sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ExtractUsername"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pass_tag"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_below="@+id/ExtractUsername"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:textSize="25sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ExtractPassword"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:id="@+id/buttonLogin"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_below="@+id/ExtractPassword"
        android:layout_centerHorizontal="true">
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_tag"
        android:id="@+id/buttonRegister"
        style="@style/ButtonText"
        android:background="@drawable/btn_black"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true">
    </Button>

</RelativeLayout>
